--- a/View/CustomersView.xaml
+++ b/View/CustomersView.xaml
@@ -1,11 +1,16 @@
 ﻿<UserControl x:Class="WiredBrainCofee.CustumrsApp.View.CustomersView"
+             x:Name="CustomersViews"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WiredBrainCofee.CustumrsApp.View"
+             xmlns:local="clr-namespace:WiredBrainCofee.CustumrsApp.View" 
+             xmlns:converter="clr-namespace:WiredBrainCofee.CustumrsApp.Converter"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <converter:NavigationSideToGridColumnConverter x:Key="NavigationSideToGridColumnConv"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -13,21 +18,21 @@
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <!--Customer List-->
-        <Grid x:Name="customerList"
-            Grid.Column="0"
+        <Grid Grid.Column="{Binding NavigationColumn,Converter={StaticResource NavigationSideToGridColumnConv} }"
             Background="#777">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Orientation="Horizontal">
-                <Button Margin="10" Width="75" Click="AddCustomer_Click">
+                <Button Margin="10" Width="75" Command="{Binding AddCustomerCommand}" 
+                        CommandParameter="{Binding ElementName=CustomersViews}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="Add"/>
                     </StackPanel>
                 </Button>
-                <Button Content="Delete" Width="75" Margin="0 10 10 10"/>
-                <Button Click="BtnMoveMenu_Click" Content="Move" Margin="0 10 10 10"/>
+                <Button Command="{Binding DeleteCustomerCommand}" Content="Delete" Width="75" Margin="0 10 10 10"/>
+                <Button Command="{Binding MoveNavigationSideCommand}" Content="Move" Margin="0 10 10 10"/>
             </StackPanel>
             <ListView x:Name="customerListView" Grid.Row="1" Margin="10 0 10 10"
                       ItemsSource="{Binding Path=Customers}"
