Add IsCustomerSelected to know the customer is selected or not and that helps us to make a visibilt of the inputs. And also for use it in the visibilt properties I use BooleanToVsibiltConverter in th brushes and seperate the Resources variables

--- a/View/CustomersView.xaml
+++ b/View/CustomersView.xaml
@@ -42,7 +42,8 @@
         <!--Customer List End-->
 
         <!--Customer Dtail-->
-        <StackPanel Margin="10" Grid.Column="1">
+        <StackPanel Margin="10" Grid.Column="1"
+                    Visibility="{Binding IsCustomerSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Label>FirstName:</Label>
             <TextBox Text="{Binding Path=SelectedCustomer.FirstName,
                 Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
