--- a/Resources/Converters.xaml
+++ b/Resources/Converters.xaml
@@ -1,4 +1,4 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="HeaderBackGroundColor" Color="#F05A28"/>
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>    
 </ResourceDictionary>
