Use dataTemplate to list a customers items and give them to the ItemTemplate of the list view as the resources

--- a/View/CustomersView.xaml
+++ b/View/CustomersView.xaml
@@ -10,6 +10,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <converter:NavigationSideToGridColumnConverter x:Key="NavigationSideToGridColumnConv"/>
+        <DataTemplate x:Key="CustomerListItem">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding FirstName}" />
+                <TextBlock Text="{Binding LastName}" FontStyle="Italic" Margin="5 0 0 0"/>
+            </StackPanel>
+        </DataTemplate>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -36,8 +42,8 @@
             </StackPanel>
             <ListView x:Name="customerListView" Grid.Row="1" Margin="10 0 10 10"
                       ItemsSource="{Binding Path=Customers}"
-                      SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}"
-                      DisplayMemberPath="FirstName"/>
+                      ItemTemplate="{StaticResource CustomerListItem}"
+                      SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}"/>
         </Grid>
         <!--Customer List End-->
 
