--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,11 @@
         mc:Ignorable="d"
         d:DesignWidth="700" d:DesignHeight="600"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <DataTemplate x:Key="CustomerTemplateViewModel">
+            <view:CustomersView/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -26,8 +31,8 @@
 
         <controls:HeaderControl Grid.Row="1"/>
 
-        <view:CustomersView Grid.Row="2"/>
-
+        <ContentControl Grid.Row="2" Content="{Binding SelectedViewModel}"
+                        ContentTemplate="{StaticResource CustomerTemplateViewModel}"/>
         <!--Status Bar-->
         <StatusBar Grid.Row="3">
             <StatusBarItem FontSize="20" Content="(c) Wired Brain Coffee"/>
