--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WiredBrainCofee.CustumrsApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WiredBrainCofee.CustumrsApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WiredBrainCofee.CustumrsApp">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
